Create video_18 branch

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body,
 html {
-    margin: 0;    
+    margin: 0;
     background: #333;
     overflow: hidden;
     -webkit-touch-callout: none;
@@ -9,6 +9,12 @@ html {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.logo, 
+#g {
+    font: normal 0/0 Arial, Helvetica, sans-serif;
+    color: #fff;
 }
 
 body,
@@ -32,7 +38,8 @@ html,
     src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.eot?#iefix") format("embedded-opentype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.woff") format("woff"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.ttf") format("truetype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.svg#GeneralFoundicons") format("svg");
 }
 
-.logo a {
+.logo a,
+#g a {
     text-decoration: none;
     color: #fff;
     display: block;
@@ -64,9 +71,7 @@ html,
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -225px 0 0 -225px;
-    font: normal 0/0 Arial, Helvetica, sans-serif;
-    color: #fff;
+    margin: -225px 0 0 -225px
 }
 
 .logo .card {
@@ -245,7 +250,7 @@ html,
     display: inline-block
 }
 
-.logo .card {
+.card {
     display: inline-block;
     perspective: 1000;
     -webkit-perspective: 1000;
@@ -253,15 +258,11 @@ html,
     border: none;
 }
 
-.logo .card a:hover {
-    text-decoration: none;
-}
-
-.logo .card:not(.active):hover {
+.card:not(.active):hover {
     opacity: .8
 }
 
-.logo .card .b::before {
+.card .b::before {
     content: attr(data-f);
     display: block;
     font: normal 100px/100px "GeneralFoundicons";
